# polyrus

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  account.env.example  pyproject.toml
examples/: verified_code_task.py
examples/prb/: README.md  tasks.jsonl
src/polyrus/: __init__.py  action_registry.py  actions.py  browser.py  calibration.py  cli.py  context.py  dials.py  digest.py  divergent.py  dod.py  escalation.py  eval.py  frame.py  gates.py  harness.py  humanize.py  ledger.py  memory.py  models.py  planner.py  preflight.py  research.py  routing.py  sandbox.py  scoring.py  secrets.py  session.py  skeleton.py  skills_seed.py  store.py  types.py  understanding.py
src/polyrus/adapters/: __init__.py  mcp.py
src/polyrus/core/: __init__.py  arms.py  coordinator.py
src/polyrus/notify/: __init__.py  telegram.py
src/polyrus/server/: __init__.py  app.py  driver.py  page.py
tests/: test_action_registry.py  test_actions.py  test_auto_ux.py  test_automation.py  test_browser.py  test_budget_loop.py  test_build_verifier.py  test_cli.py  test_cli_backend.py  test_cli_digest.py  test_cli_plan.py  test_context.py  test_dials.py  test_digest_plan.py  test_digest_run.py  test_divergent.py  test_dod_store.py  test_eval.py  test_finance.py  test_frame.py  test_homepage_build.py  test_mcp.py  test_memory.py  test_models_fallback.py  test_mutation_differential.py  test_phase1_arms.py  test_plan_verifiers.py  test_planner.py  test_preflight.py  test_research.py  test_responsiveness.py  test_retrieval.py  test_routing.py  test_scoring.py  test_secrets.py  test_server.py  test_session.py  test_skeleton.py  test_skills_curation.py  test_smoke.py  (+7 more)
trial/: solution.py
trial/.claude/: settings.json
(+23 files in other folders)
